# fsm

./: .dockerignore  .gitignore  .gitmodules  README.md  pyproject.toml  repo_map.md  test_compilation.py
.github/workflows/: release-docker.yml
config/: README.md  categories.yaml  chat.yaml  consult.yaml  ingest.yaml  llm-nvidia.yaml  llm-ollama.yaml  llm.yaml  patient.yaml  retrieve.yaml
deploy/: .env.example  Dockerfile.api  Dockerfile.web  README.md  docker-compose.override.example.yml  docker-compose.yml
deploy/config/: aliases.yaml  api.yaml  chat.yaml  consult.yaml  ingest.yaml  llm-nvidia.yaml.example  llm-ollama.yaml.example  llm-openai.yaml.example  retrieve.yaml
deploy/logrotate/: adviser.template
deploy/nginx/: gateway.conf  host-adviser.conf.template
docs/: chunks_202605210158.json  documents_202605210156.json  ingest.sql
docs/concept/: agentic-kb-retrieval.md  context-summarization-concept.md  fsm-impl-plan-retrieve-concept.md  fsm-pipeline-docs-chunks-tags-store.md  kd-search-retrieve-data-from-strore.md  med-adviser-baseline-spec.md  med-adviser-m01-spec.md  med-ai-adviser-concept.md
docs/med-llm-models/: healthcare-open-llm-models.md  open-medical-llm-list.md
docs/openapi/: openapi.json
docs/plans/: fsm-impl-plan-ingest.md  fsm-impl-plan-retrieval.md  fsm-impl-plan.md  med-ai-adviser-roadmap.md  phase-m0-plan.md  phase2-3-sessions-impl.md  phase4-impl-plan.md  phase6-7-impl-plan.md
main/: main.py
prompts/chat/: summarize.md  system.md  user.md
prompts/consult/: system.md  user.md
prompts/medical_consult/: system.md  user.md
scripts/: migrate_pilot_to_default.py  run_ingest_all.sh
src/api/: app.py  config.py  cookies.py  deps.py  factory.py  main.py  middleware.py  schema_init.py  schemas.py  user_context.py  user_db_paths.py  user_resolver.py
src/chat/: __init__.py  agentic_loop.py  baseline_retriever.py  config.py  context_builder.py  models.py  summarizer.py  tool_executor.py
src/common/: __init__.py  alias_map.py  bundle_builder.py  logging_config.py  normalizer.py  patient.py  types.py  upload_filename.py  username.py
src/commons/: __init__.py  logging_config.py
src/fsm/: __init__.py  core.py  (+4 more)
tests/: test_document_date.py  test_document_date_extractor.py  test_document_date_variants.py  test_ingest_source_path.py  test_retrieval_fixtures.py  test_tokenizer.py  test_upload_filename.py
(+159 files in other folders)
