[project]
name = "fsm"
version = "0.1.0"
description = "Async typed Saga (pipeline runner) with resume checkpoints in SQLite"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "pydantic>=2.7,<3",
  "aiosqlite>=0.20.0,<0.22",
  "markdown-it-py>=3.0,<4",
  "PyYAML>=6.0,<7",
  "openai>=1.30,<2",
  "typer>=0.12,<1",
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.29,<1",
  "python-multipart>=0.0.9",
]

[project.scripts]
advisor = "src.main.consult:app"
chat = "src.main.chat:app"
serve = "src.api.main:main"

[dependency-groups]
dev = [
  "pytest>=8.4.2,<9",
  "pytest-asyncio>=0.24,<0.26",
  "ruff>=0.6,<1.0",
  "mypy>=1.10,<2",
  "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict = true

[build-system]
requires = ["setuptools>=69", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "chat*", "common*", "fsm*", "llm*", "pipelines*", "services*", "store*"]